--- a/src/components/projects/project.css
+++ b/src/components/projects/project.css
@@ -18,7 +18,7 @@
 
 }
 .project-div p{
-    font-family:'Times New Roman', Times, serif;
+    font-family:serif;
     text-align: center;
 }
 .projects-link{
