--- a/src/components/openSource/opensource.css
+++ b/src/components/openSource/opensource.css
@@ -3,7 +3,81 @@
     flex-direction: column;
     align-self: center;
     justify-content: center;
+    margin-bottom: 20px;
+    margin-top: 10px;
+
 }
 h1{
     text-align: center;
+}
+.contributions{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.contri{
+    background-color: #DCFFE4;
+    width: 80vw;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin: 5px;
+    padding: 7px;
+    border:2px solid #a3c8ac; 
+    border-radius: 10px;
+}
+@media only screen and (max-width: 900px) {
+    .contri {
+      background-color: #DCFFE4;
+        width: 90vw;
+    
+    }
+}
+.contri-first{
+display: flex;
+flex-direction: column;
+
+}
+
+.image-contri{
+    width: 60px;
+    height: 60px;
+
+}
+a.repolink{
+    position: relative;
+    color: #000;
+    text-decoration: none;
+  }
+  
+a.repolink:hover {
+    color: #000;
+}
+  
+a.repolink::before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #000;
+    transform: scaleX(0);
+    transition: transform 0.3s ease;
+  }
+  
+a.repolink:hover::before {
+    transform: scaleX(1);
+}
+  
+.contri-heading{
+    font-weight: 200;
+    font-size: medium;
+    color: black;
+}
+.contri-repo{
+    font-size: small;
 }
